--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yash Doke | Personal Display Hub</title>
-    <meta name="description" content="Portfolio Project" />
+    <title>Yash Doke | Portfolio</title>
+    <meta name="description" content="A glimpse into my professional journey." />
     <meta name="author" content="Yash Doke" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- Open Graph Meta -->
-    <meta property="og:title" content="the-personal-display-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Yash Doke - Portfolio" />
+    <meta property="og:description" content="A glimpse into my professional journey." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://ysdportfolio.vercel.app" />
+    <meta property="og:image" content="https://ysdportfolio.vercel.app/preview.png" />
 
     <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Yash Doke - Portfolio" />
+    <meta name="twitter:description" content="A glimpse into my professional journey." />
+    <meta name="twitter:image" content="https://ysdportfolio.vercel.app/preview.png" />
   </head>
 
   <body>
